# platform-buckets-api

./: .dockerignore  .gitignore  .pre-commit-config.yaml  Dockerfile  Makefile  README.md  pyproject.toml  setup.cfg  setup.py
.github/: dependabot.yml
.github/workflows/: ci.yaml  outputs-ci.yaml  outputs-test.yaml  release-image.yml  release.yml  remove-automerge.yml  test.yaml  update-pre-commit.yml
.github/workflows/outputs-server/: ci.yaml  test.yaml
buckets-output-server/: .env.dev  .pre-commit-config.yaml  Dockerfile  Makefile  pyproject.toml  pytest.ini
buckets-output-server/src/: config.py  dependencies.py  main.py  models.py  utils.py
buckets-output-server/src/auth/: dependencies.py
buckets-output-server/tests/: README.md  conftest.py  test_api.py  test_integration.py  test_models.py  test_utils.py
charts/buckets-output-server/: Chart.yaml  values.yaml
charts/buckets-output-server/templates/: NOTES.txt  _helpers.tpl  deployment.yaml  hpa.yaml  service.yaml  serviceaccount.yaml
charts/buckets-output-server/templates/tests/: test-connection.yaml
charts/platform-buckets/: Chart.yaml  values-dev.yaml  values.yaml
charts/platform-buckets/templates/: _helpers.tpl  crd-persistentbucketcredential.yml  crd-userbucket.yml  deployment.yaml  externalSecret.yaml  ingress.yaml  rbac.yaml  secrets.yml  service.yaml
deploy/platformbucketsapi/: Chart.yaml  values-dev.yaml  values-template.yaml
deploy/platformbucketsapi/crds/: crd-persistentbucketcredential.yml
deploy/platformbucketsapi/templates/: crd-persistentbucketcredential.yml  crd-userbucket.yml  crd-userbucketcredential.yml  deployment.yaml  ingress.yaml  rbac.yaml  service.yaml
platform_buckets_api/: api.py  bucket_deleter.py  config.py  config_factory.py  identity.py  kube_client.py  kube_storage.py  kube_utils.py  permissions_service.py  project_based_namespaces_migration.py  project_deleter.py  providers.py  schema.py  service.py  storage.py
platform_buckets_api/utils/: __init__.py  asyncio.py
requirements/: syntax.txt
tests/: conftest.py  mocks.py
tests/integration/: auth.py  conftest.py  kube.py  minio.py  moto_server.py  seaweedfs.py  test_api.py  test_aws_provider.py  test_azure_provider.py  test_bucket_deleter.py  test_gcs_provider.py  test_k8s_storage.py  test_kube_client.py  test_minio_provider.py  test_open_stack_provider.py  test_project_deleter.py  test_provider_base.py  test_seaweedfs_provider.py  test_service.py
tests/k8s/: cluster.sh  crd-persistentbucketcredential.yml  crd-userbucket.yml
tests/unit/: conftest.py  test_bucket_deleter.py  test_config.py  test_permissions_service.py  test_service.py  test_storage.py
