[metadata]
name = platform-buckets-api
description = Neu.ro platform buckets api
url = https://github.com/neuro-inc/platform-buckets-api
long_description = file: README.md, LICENSE
license = Apache 2
classifiers =
    License :: OSI Approved :: Apache 2
    Programming Language :: Python :: 3

[options]
zip_safe = False
python_requires = >=3.12
packages = find:
platforms = any
include_package_data = True
install_requires =
    aiohttp==3.11.16
    neuro-auth-client==24.8.0
    neuro-logging==25.1.0
    marshmallow==3.26.1
    apispec==6.8.1
    aiohttp-apispec==3.0.0b2
    markupsafe==3.0.2
    aiobotocore==2.21.1
    bmc==0.0.4
    azure-storage-blob==12.25.1
    google-cloud-storage==3.1.0
    google-cloud-iam==2.19.0
    google-api-python-client==2.167.0

[options.entry_points]
console_scripts =
    platform-buckets-api = platform_buckets_api.api:main

[options.extras_require]
dev =
    mypy==1.14.1
    pre-commit==4.2.0
    codecov==2.1.13
    docker==7.1.0
    pytest==7.4.2
    pytest-asyncio==0.21.1
    pytest-cov==4.1.0

[flake8]
max-line-length = 88
ignore = N801,N802,N803,E252,W503,E133,E203,F541

[isort]
profile = black
combine_as_imports = True

[tool:pytest]
testpaths = tests
asyncio_mode = auto
filterwarnings=
    ignore::DeprecationWarning:jose
    ignore::ResourceWarning

[coverage:run]
branch = True
source = platform_buckets_api

[mypy]
check_untyped_defs = True
disallow_any_generics = True
disallow_untyped_defs = True
follow_imports = silent
strict_optional = True
warn_redundant_casts = True
warn_unused_ignores = True

[mypy-aiohttp_security]
ignore_missing_imports = true

[mypy-aiohttp_security.api]
ignore_missing_imports = true

[mypy-jose]
ignore_missing_imports = true

[mypy-neuro_auth_client.*]
ignore_missing_imports = true

[mypy-pytest]
ignore_missing_imports = true

[mypy-setuptools]
ignore_missing_imports = true

[mypy-trafaret]
ignore_missing_imports = true

[mypy-aiohttp_apispec]
ignore_missing_imports = true

[mypy-docker.*]
ignore_missing_imports = true

[mypy-aiobotocore.*]
ignore_missing_imports = true

[mypy-botocore.*]
ignore_missing_imports = true

[mypy-bmc.*]
ignore_missing_imports = true

[mypy-azure.*]
ignore_missing_imports = true

[mypy-google.*]
ignore_missing_imports = true

[mypy-googleapiclient.*]
ignore_missing_imports = true
